large/kubernetes-master/test/e2e/dra/test-driver/deploy/example/pod-shared.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-shared-claim
spec:
  restartPolicy: Never
  containers:
  - name: with-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.36.1-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
    resources:
      claims:
      - name: resource
  - name: without-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.36.1-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
  resourceClaims:
  - name: resource
    resourceClaimName: shared-claim
---
apiVersion: v1
kind: Pod
metadata:
  name: test-shared-claim-2
spec:
  restartPolicy: Never
  containers:
  - name: with-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.36.1-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
    resources:
      claims:
      - name: resource
  - name: without-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.36.1-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
  resourceClaims:
  - name: resource
    resourceClaimName: shared-claim
# ID-1768294472-21d1de91
